force-app/main/default/objects/Appraisal_Cycles__mdt.object
<CustomObject>
    <fields>
        <fullName>Appraisal_Cycle_Name__c</fullName>
        <label>Appraisal Cycle Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MidTermCycle</fullName>
                    <label>Mid Term Cycle</label>
                </value>
                <value>
                    <fullName>AnnualCycle</fullName>
                    <label>Annual Cycle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Appraisal Cycles</label>
    <pluralLabel>Appraisal Cycles</pluralLabel>
</CustomObject>